// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Lease transaction service get fetches real tx 1`] = `
Object {
  "__type": "transaction",
  "data": Object {
    "amount": "107.05754895",
    "fee": "0.001",
    "height": 600887,
    "id": "2rdiawoYXnwVieRgTkESYKAKwcRrnLZQ4abmC9JQSj7n",
    "recipient": "3P2HNUd5VUPLMQkJmctTPEeeHumiPN2GkTb",
    "sender": "3PMY5XbSpvcQnYNCMiLWAaHuTwQwN6sSoy4",
    "senderPublicKey": "AiXERNpnVgGM25Au55kfcz39K9FUoysqD5nCSpew4MYo",
    "signature": "5CVsdA6Weyx28MyGAQoFD8HdSBMmop3RQJvGv8w4k2axRyJ4f76oV4vWoCoV31B4Dv2dRcSfG6N88AzszccH9xV",
    "timestamp": 2017-07-29T02:22:01.407Z,
    "type": 8,
    "version": 1,
  },
}
`;

exports[`Lease transaction service mget fetches real txs with nulls for unreal 1`] = `
Object {
  "__type": "list",
  "data": Array [
    Object {
      "__type": "transaction",
      "data": Object {
        "amount": "107.05754895",
        "fee": "0.001",
        "height": 600887,
        "id": "2rdiawoYXnwVieRgTkESYKAKwcRrnLZQ4abmC9JQSj7n",
        "recipient": "3P2HNUd5VUPLMQkJmctTPEeeHumiPN2GkTb",
        "sender": "3PMY5XbSpvcQnYNCMiLWAaHuTwQwN6sSoy4",
        "senderPublicKey": "AiXERNpnVgGM25Au55kfcz39K9FUoysqD5nCSpew4MYo",
        "signature": "5CVsdA6Weyx28MyGAQoFD8HdSBMmop3RQJvGv8w4k2axRyJ4f76oV4vWoCoV31B4Dv2dRcSfG6N88AzszccH9xV",
        "timestamp": 2017-07-29T02:22:01.407Z,
        "type": 8,
        "version": 1,
      },
    },
    null,
    Object {
      "__type": "transaction",
      "data": Object {
        "amount": "42255.1861538",
        "fee": "0.001",
        "height": 435592,
        "id": "CQ1AAooHc3kK81Gk3NY7Y9ewsDhQqRpiito4pm64NkS9",
        "recipient": "3PE9guSrrV1vLCjtbUQrgJbtkaFKPJahras",
        "sender": "3PJmhjaryzfWsbkrnBUfwqfzv1YNtLaHua5",
        "senderPublicKey": "3a5enbcYnahZCWBAvRPp7fmQoz7C6p4afNQgLAkZZqWx",
        "signature": "3dZpxCJYmmdQJqYmidQy7Jxzg8pgLpEF37wLT7TQEHhSi93gC84W2tUACrEqidhmEVbN3JiA2hVTuQB35s27cfMt",
        "timestamp": 2017-04-03T07:59:27.607Z,
        "type": 8,
        "version": 1,
      },
    },
  ],
}
`;
